[TS-2822] Crash in LogBufferIterator::next

(cherry picked from commit 13453d9ab8c975fd12da632a49868eeaf2eb1fd3)